fixed add item spacing on mobile and add recipe text color

--- a/resources/assets/sass/modules/add-recipe-styling.scss
+++ b/resources/assets/sass/modules/add-recipe-styling.scss
@@ -253,7 +253,7 @@
   .ingredient-input {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 20%;
   }
 
 
